[package]
name = "libimagdiary"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

[dependencies]
chrono = "0.2.21"
log = "0.3.5"
semver = "0.2"
toml = "0.1.25"

[dependencies.libimagstore]
path = "../libimagstore"

[dependencies.libimagrt]
path = "../libimagrt"

[dependencies.libimagnotes]
path = "../libimagnotes"

